# wheelchair_planner

./: CMakeLists.txt  README.md  package.xml
example/: mpc_test.py  mpc_test2.py  rc_test.py  wheelchair_simulator_rc_test.py
include/dynobs_detector/: DynObsDetector.h
include/wheelchair_planner/: ConnectedBodyPlanner.h  PlannerCore.h  SingleBodyPlanner.h  Wrapper.h
launch/: dynobs_detector.launch
params/: dynobs_det.yaml
planner/: AckermannMPC.py  AckermannMPCNode.py  AckermannMPC_V2.py  AckermannMPC_V3.py  MPCAckermann.py  MPCAckermann2.py  MPCAckermannNode.py  mpc_ackermann_steering_func.py
simulator/: README.md  WheelSimBaseNode.py  WheelSimVisualizeNode.py  WheelTractionSim.py  settings.yaml  utils.py  wheelchairsim_bridge.py
src/dynobs_detector/: DynObsDetector.cpp
src/exe/: dodmain.cpp  main.cpp
src/wheelchair_planner/: ConnectedBodyPlanner.cpp  PlannerCore.cpp  SingleBodyPlanner.cpp  Wrapper.cpp
world/: 221118_2DLiDAR.bag
